@@ -1,5 +1,7 @@
 === master
 
+* Support passing keyword arguments to mailer plugin mail/sendmail class methods (jeremyevans)
+
 * Improve performance when using :assume_fixed_locals render plugin option, when using compiled methods and freezing the app (jeremyevans)
 
 * Add part plugin, with a simpler (and better performing when using :assume_fixed_locals) method for rendering with locals (jeremyevans)
